--- a/podinfo/template.yaml
+++ b/podinfo/template.yaml
@@ -65,7 +65,7 @@ spec:
         oidcCustomization: ${{ steps.environment.output.githubOIDCCustomization }}
 
     - id: register
-      name: Register Component in Catalog
+      name: Register
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
