--- a/podinfo/template.yaml
+++ b/podinfo/template.yaml
@@ -65,16 +65,16 @@ spec:
         oidcCustomization: ${{ steps.environment.output.githubOIDCCustomization }}
 
     - id: register
-      name: Register
+      name: Register Component in Catalog
       action: catalog:register
       input:
-        repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
+        repoContentsUrl: ${{ steps['create-repo'].output.repoContentsUrl }}
         catalogInfoPath: '/catalog-info.yaml'
 
   output:
     links:
       - title: Repository
-        url: ${{ steps['publish'].output.remoteUrl }}
+        url: ${{ steps['create-repo'].output.remoteUrl }}
       - title: Open in catalog
         icon: catalog
         entityRef: ${{ steps['register'].output.entityRef }}
