--- a/5min-node-service/template.yaml
+++ b/5min-node-service/template.yaml
@@ -64,7 +64,7 @@ spec:
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: '/catalog-info.yaml'
+        catalogInfoPath: '/main/catalog-info.yaml'
 
   output:
     links:
