--- a/5min-node-service/content/.github/workflows/deploy.yaml
+++ b/5min-node-service/content/.github/workflows/deploy.yaml
@@ -30,7 +30,11 @@ env:
   GCP_GAR_NAME: ${{ vars.GCP_GAR_NAME }}
 {% endraw %}
 {%- else -%}
+{% raw %}
+
 # Unknown cloud provider: ${{ values.cloudProvider }}
+  # Nothing to do here
+{% endraw %}
 {% endif %}
   HUMCTL_VERSION: '*'
   APP_NAME: ${{ values.name }}
@@ -101,9 +105,15 @@ jobs:
           gcloud auth configure-docker ${{ env.GCP_GAR_HOST }} --quiet
           echo "CONTAINER_REGISTRY=${{ env.GCP_GAR_NAME }}" >> "$GITHUB_ENV"
 {% endraw %}
+{%- elif values.cloudProvider === "5min" -%}
+{% raw %}
+      - name: Define 5min registry
+        run: |
+          echo "CONTAINER_REGISTRY=localhost:5001" >> "$GITHUB_ENV"
+{% endraw %}
 {% endif %}
 {% raw %}
-      - run: docker build --platform linux/amd64 . -t $CONTAINER_REGISTRY/$IMAGE:$TAG
+      - run: docker build . -t $CONTAINER_REGISTRY/$IMAGE:$TAG
       - run: docker push $CONTAINER_REGISTRY/$IMAGE:$TAG
 
       - uses: humanitec/setup-cli-action@v1
@@ -123,11 +133,14 @@ jobs:
 
       - name: Deploy using Score
         run: |
+          humctl api POST /orgs/${{ vars.HUMANITEC_ORG_ID }}/apps/${{ env.APP_NAME }}/envs \
+            -d '{ "id": "5min-local", "name": "5min-local", "type": "5min-local" }' \
+            --token ${{ secrets.HUMANITEC_TOKEN }}
           humctl score deploy \
             --token ${{ secrets.HUMANITEC_TOKEN }} \
             --org ${{ vars.HUMANITEC_ORG_ID }} \
             --app ${{ env.APP_NAME }} \
-            --env development \
+            --env 5min-local \
             -f score.yaml \
             --extensions humanitec.score.yaml \
             --workload-source-url "https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/score.yaml" \
