--- a/5min-node-service/content/.github/workflows/pull_request.yaml
+++ b/5min-node-service/content/.github/workflows/pull_request.yaml
@@ -28,10 +28,14 @@ env:
   GCP_GAR_NAME: ${{ vars.GCP_GAR_NAME }}
 {% endraw %}
 {%- else -%}
+{% raw %}
+
 # Unknown cloud provider: ${{ values.cloudProvider }}
+  # Nothing to do here
+{% endraw %}
 {% endif %}
-  BASE_ENVIRONMENT: 'development'
-  ENVIRONMENT_TYPE: 'development'
+  BASE_ENVIRONMENT: '5min-local'
+  ENVIRONMENT_TYPE: '5min-local'
   HUMCTL_VERSION: '*'
   ENVIRONMENT_ID: {% raw %}pr-${{ github.event.number }}{% endraw %}
   ENVIRONMENT_NAME: {% raw %}PR-${{ github.event.number }}{% endraw %}
@@ -115,9 +119,15 @@ jobs:
           gcloud auth configure-docker ${{ env.GCP_GAR_HOST }} --quiet
           echo "CONTAINER_REGISTRY=${{ env.GCP_GAR_NAME }}" >> "$GITHUB_ENV"
 {% endraw %}
+{%- elif values.cloudProvider === "5min" -%}
+{% raw %}
+      - name: Define 5min registry
+        run: |
+          echo "CONTAINER_REGISTRY=localhost:5001" >> "$GITHUB_ENV"
+{% endraw %}
 {% endif %}
 {% raw %}
-      - run: docker build --platform linux/amd64 . -t $CONTAINER_REGISTRY/$IMAGE:$TAG
+      - run: docker build . -t $CONTAINER_REGISTRY/$IMAGE:$TAG
       - run: docker push $CONTAINER_REGISTRY/$IMAGE:$TAG
 
       - name: Deploy Score
@@ -133,117 +143,4 @@ jobs:
               --image $CONTAINER_REGISTRY/$IMAGE:$TAG \
               --message "$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "${{ github.event.pull_request.commits_url }}?per_page=10" | jq -r .[-1].commit.message)" \
               --wait
-      - name: Build Comment Message
-        if: ${{ always() }}
-        run: |
-          DEPLOYMENT_ID=$(humctl get deployment . -o json \
-              --token ${{ secrets.HUMANITEC_TOKEN }} \
-              --org ${{ vars.HUMANITEC_ORG_ID}} \
-              --app ${{ env.APP_NAME }} \
-              --env ${{ env.ENVIRONMENT_ID }} \
-              | jq -r .metadata.id)
-          ENV_URL="https://app.humanitec.io/orgs/"${{ vars.HUMANITEC_ORG_ID }}"/apps/"${{ env.APP_NAME }}"/envs/"${{ env.ENVIRONMENT_ID }}"/deploys/"${DEPLOYMENT_ID}
-          DOMAINS=$(humctl get active-resources \
-                      --token ${{ secrets.HUMANITEC_TOKEN }} \
-                      --org ${{ vars.HUMANITEC_ORG_ID }} \
-                      --app ${{ env.APP_NAME }} \
-                      --env ${{ env.ENVIRONMENT_ID }} -o json \
-                      | jq -r '. | map(. | select(.metadata.type == "dns")) | map((.metadata.res_id | split(".") | .[1]) + ": [" + .status.resource.host + "](https://" + .status.resource.host + ")") | join("\n")')
-
-          DEPLOYMENT_ERRORS=$(humctl get deployment-error \
-              --token ${{ secrets.HUMANITEC_TOKEN }} \
-              --org ${{ vars.HUMANITEC_ORG_ID }} \
-              --app ${{ env.APP_NAME }} \
-              --env ${{ env.ENVIRONMENT_ID }} -o json)
-          if [ "$DEPLOYMENT_ERRORS" = "[]" ]; then
-            echo "## Deployment successfully completed for ${{ env.ENVIRONMENT_NAME }}! :tada:" >> pr_message.txt
-            echo "" >> pr_message.txt
-          else
-            echo "## Deployment failed for ${{ env.ENVIRONMENT_NAME }}! :x:" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "### Errors:" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo '```json' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "$DEPLOYMENT_ERRORS" | jq .[0].status.message -r >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo '```' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "<details><summary>Errors details</summary>" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "### Errors details:" >> pr_message.txt
-            echo '```json' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "$DEPLOYMENT_ERRORS" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo '```' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "</details>" >> pr_message.txt
-            echo "" >> pr_message.txt
-          fi
-
-          echo "### [View in Humanitec]($ENV_URL)" >> pr_message.txt
-          echo "Deployment ID: $DEPLOYMENT_ID" >> pr_message.txt
-
-          echo "" >> pr_message.txt
-          echo "### Domains:" >> pr_message.txt
-          echo "" >> pr_message.txt
-          echo "$DOMAINS" >> pr_message.txt
-          echo "" >> pr_message.txt
-
-          echo "<details><summary>Deployment diff</summary>" >> pr_message.txt
-          echo "" >> pr_message.txt
-          echo "### Deployment diff:" >> pr_message.txt
-          echo '```json' >> pr_message.txt
-          echo "" >> pr_message.txt
-          humctl diff sets env/${{ env.ENVIRONMENT_ID }} env/${{ env.BASE_ENVIRONMENT }} \
-              --token ${{ secrets.HUMANITEC_TOKEN }} \
-              --org ${{ vars.HUMANITEC_ORG_ID }} \
-              --app ${{ env.APP_NAME }} -o json >> pr_message.txt
-          echo "" >> pr_message.txt
-          echo '```' >> pr_message.txt
-          echo "" >> pr_message.txt
-          echo "</details>" >> pr_message.txt
-
-          if [ "$DEPLOYMENT_ERRORS" = "[]" ]; then
-            echo "<details><summary>Active Resources Usage</summary>" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "### Active Resources Usage:" >> pr_message.txt
-            echo '```none' >> pr_message.txt
-            echo "" >> pr_message.txt
-            humctl resources active-resource-usage \
-                --env ${{ env.ENVIRONMENT_ID }} \
-                --token ${{ secrets.HUMANITEC_TOKEN }} \
-                --org ${{ vars.HUMANITEC_ORG_ID }} \
-                --app ${{ env.APP_NAME }} >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo '```' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "</details>" >> pr_message.txt
-          fi
-          if [ "$DEPLOYMENT_ERRORS" = "[]" ]; then
-            echo "<details><summary>Resources Graph</summary>" >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "### Resources Graph:" >> pr_message.txt
-            echo '```none' >> pr_message.txt
-            echo "" >> pr_message.txt
-            humctl resources graph \
-                --env ${{ env.ENVIRONMENT_ID }} \
-                --token ${{ secrets.HUMANITEC_TOKEN }} \
-                --org ${{ vars.HUMANITEC_ORG_ID }} \
-                --app ${{ env.APP_NAME }} >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo '```' >> pr_message.txt
-            echo "" >> pr_message.txt
-            echo "</details>" >> pr_message.txt
-          fi
-
-          cat pr_message.txt
-      - name: Comment PR
-        if: ${{ always() }}
-        run: |
-          gh pr comment ${{ github.event.number }} --repo ${{ github.repository }} --body-file pr_message.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 {% endraw %}
