--- a/node-service/content/Dockerfile
+++ b/node-service/content/Dockerfile
@@ -1,9 +1,9 @@
-FROM alpine:3 as builder
+FROM mirror.gcr.io/alpine:3 as builder
 RUN apk add --no-cache nodejs npm
 COPY package*.json ./
 RUN npm install --only=prod
 
-FROM alpine:3
+FROM mirror.gcr.io/alpine:3
 RUN apk add --no-cache nodejs
 COPY --from=builder /node_modules ./node_modules
 COPY index.js index.js
