--- a/node-service/content/.github/workflows/deploy.yaml
+++ b/node-service/content/.github/workflows/deploy.yaml
@@ -2,7 +2,8 @@ name: Deploy ${{ values.name | capitalize }}
 
 on:
   push:
-    branches: main
+    branches:
+    - main
 {% raw %}
 concurrency:
   group: ${{ github.ref }}
