--- a/podinfo/content/score.yaml
+++ b/podinfo/content/score.yaml
@@ -1,6 +1,8 @@
 apiVersion: score.dev/v1b1
 metadata:
   name: podinfo-workload
+  annotations:
+    tags: "website,ui,golang"
 service:
   ports:
     www:
